# householdheterogeneity

./: .gitignore  .pylintrc  Example.ipynb  GillespieNotebook.ipynb  InfectionModel.py  Lab.ipynb  Likelihood.py  ParameterInferenceLab.ipynb  README.md  SuperspreadingLab.ipynb  Vaccine.ipynb  Vaccine.py  VaccineLab.ipynb  compile_pool.py  constants.py  documentation_figures.py  fancy_plotting.py  forward_simulation.py  funfigures.py  funfigures_new.py  git_token.py  likelihood.py  metadata.json  munging.py  population.py  preparation.py  pyproject.toml  recipes.py  run_slide.py  settings.py  state_lengths.py  torch_forward_simulation.py  traits.py  utilities.py  vaccine.py  wheel.sh
covid_households/: fancy_plotting.py  gillespie_forward_simulation.py  interventions.py  k_conversions.py  likelihood.py  model_inputs.py  munging.py  plot_testing.py  population.py  precalculate_normal_parameters.py  rebuild.py  recipes.py  settings.py  state_lengths.py  timing_test.py  torch_forward_simulation.py  traits.py  utilities.py
covidhouseholds/: constants.py  fancy_plotting.py  gillespie_forward_simulation.py  k_conversions.py  model_inputs.py  plot_testing.py  precalculate_normal_parameters.py  rebuild.py  recipes.py  settings.py  state_lengths.py  timing_test.py  torch_forward_simulation.py  utilities.py
data/: beta_lookup.csv  indices_to_rerun.csv  p80_lookup.csv  s80_lookup.csv
notebooks/: CheckBadBetas.ipynb  Covid_Households_Forward_Simulation_Minimal_Example.ipynb  EmpiricalFits.ipynb  EpidemicsPrep.ipynb  MassForwardSimulation.ipynb  MinimalForwardSimulation.ipynb  TraitFigures.ipynb  (+3 more)
(+329 files in other folders)
