[tool.poetry]
name = "covid_households"
version = "0.1.0"
description = ""
authors = ["Thayer Anderson"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
#numpy = {path = "numpy-1.20.2-cp39-cp39-macosx_11_0_arm64.whl"}
numpy = "^1.2"
#scipy = {path = "scipy-1.7.0-cp39-cp39-macosx_11_0_arm64.whl"}
scipy = "^1.7.0"
#pandas = {path = "pandas-1.2.4-cp39-cp39-macosx_11_0_arm64.whl"}
pandas = "^1.2.4"
seaborn = {path = "seaborn-0.11.1-py3-none-any.whl"}
torch = {path = "torch-1.9.0-cp39-none-macosx_11_0_arm64.whl"}

matplotlib = "^3.4.2"
ipython_unittest = "^0.3.1"
ipykernel = "^6.8.0"
pyarrow = "^7.0.0"
curlybrace = {git = "https://github.com/tanderson11/curlybrace.git"}
flameprof = "^0.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
