[tool.poetry]
name = "covidhouseholds"
version = "0.1.0"
description = ""
authors = ["Thayer Anderson"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.2"
scipy = "^1.7.0"
pandas = "^1.2.4"

matplotlib = "^3.4.2"
ipython_unittest = "^0.3.1"
ipykernel = "^6.8.0"
pyarrow = "^7.0.0"
curlybrace = {git = "https://github.com/tanderson11/curlybrace.git"}
flameprof = "^0.4"
openpyxl = "^3.0.10"
tqdm = "^4.64.0"
torch = "^1.12.0"
seaborn = "^0.11.2"
statsmodels = "^0.14.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
